<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_infowindow"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/w1"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/w2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/hint_setting"
            android:textColor="#0000cc" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#c2c2c2" />

    <RelativeLayout
        android:id="@+id/mn_layout"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_marginLeft="8dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/mn_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/mn_hint_text" />

        <TextView
            android:id="@+id/mn_textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mn_textView"
            android:text="(或选择模拟位置信息应用☞选择本应用)" />

        <TextView
            android:id="@+id/mn_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/mn_textView"
            android:text="@string/hint_error"
            android:textColor="#ff0000" />

        <TextView
            android:id="@+id/mn_trueView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/mn_textView"
            android:text="@string/hint_true"
            android:textColor="#0000cc"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#c2c2c2" />

    <RelativeLayout
        android:id="@+id/wz_layout"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_marginLeft="8dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/wz_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/wz_hint_text" />

        <TextView
            android:id="@+id/wz_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/wz_textView"
            android:text="@string/hint_error"
            android:textColor="#ff0000" />

        <TextView
            android:id="@+id/wz_trueView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/wz_textView"
            android:text="@string/hint_true"
            android:textColor="#0000cc"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#c2c2c2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/setting_ignore_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:focusable="true"
            android:gravity="center"
            android:padding="12dp"
            android:text="跳过并继续穿越\n（☆谨慎选择☆可能出现修改地址失败或闪退等情况）"
            android:background="@color/colorPrimary"
            android:textColor="#ffffff"
            android:textSize="13sp" />
    </LinearLayout>
</LinearLayout>